style(validation): Rename typo class and rename query selector